Refactor dialogs views